--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -13,7 +13,9 @@ html {
 }
 
 body {
-    margin: 0
+    margin: 0;
+   
+
 }
 
 article,
@@ -7685,7 +7687,7 @@ button.close {
     background-color: #000\9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .carousel-indicators .active {
