--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -14,8 +14,6 @@ html {
 
 body {
     margin: 0;
-   
-
 }
 
 article,
@@ -1479,7 +1477,9 @@ hr {
     margin: -1px;
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
-    border: 0
+    border: 0;
+   
+    
 }
 
 .sr-only-focusable:active,
@@ -1496,18 +1496,8 @@ hr {
     cursor: pointer
 }
 
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.h1,.h2,.h3,.h4,.h5,.h6
+ {
     font-family: inherit;
     font-weight: 500;
     line-height: 1.1;
@@ -7684,10 +7674,9 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
-    border-radius: 10px;
+    border-radius:10px;
 }
 
 .carousel-indicators .active {
