--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ body {
 .bloc .container {
     padding-left: 0;
     padding-right: 0;
-    margin-left: 0;
+   
 }
+
 
 .bloc-lg {
     padding: 100px 50px;
@@ -83,6 +84,7 @@ body {
     left: 0;
     right: 0;
 }
+
 
 .texture-paper::before {
     background: url("img/texture-paper-min.png");
@@ -274,7 +276,7 @@ body {
 .row.row-no-gutters > [class^="col-"],
 .row.row-no-gutters > [class*=" col-"] {
     padding-right: 0;
-    padding-left: 0;
+   
 }
 
 #bloc-1-hero h1 {
@@ -357,6 +359,10 @@ body {
     position: relative;
     z-index: 2;
 }
+
+/* .logo img{
+    margin-top:20px;
+} */
 
 @media (min-width: 768px) {
     .site-navigation {
@@ -629,12 +635,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #2D3C67!important;
-}
-
-.container {
-    /* max-width: 1000px; */
-   
+    color: #4f4981!important;
 }
 
 .hero-bloc-text {
@@ -658,7 +659,7 @@ blockquote{
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
     
 }
 .headre-notre-travaille{
@@ -728,7 +729,9 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #ebebeb!important;
+    font-size:15px;
+    font-family:inherit;
 }
 
 .portfolio-thumb {
@@ -756,7 +759,7 @@ h4 {
 
 .bgc-white {
     background-color: #FFFFFF;
-    padding-right:0px;
+    padding-left:0;
 }
 
 .bgc-dark-slate-blue {
@@ -768,11 +771,11 @@ h4 {
 }
 
 .tc-white {
-    color: #dfdfdf!important;
+    color: #ffffff!important;
     display:flex;
     justify-content: center;
     align-items:center;
-    font-size:20px;
+    font-size:23px;
 }
 
 .btn-atomic-tangerine {
@@ -821,6 +824,17 @@ h4 {
 .bg-presentation {
     background-image: url("img/minimzer.bmp");
 }
+.text-center{
+    padding-top:20px;
+}
+.text-center li{
+    list-style:none;
+}
+.text-partenaires{
+ padding-left:35px;
+ color:white;
+}
+
 
 @media (max-width: 1024px) {
     .bloc {
@@ -904,7 +918,6 @@ h4 {
     }
     .navbar.row {
         margin-left: 0;
-        margin-right: 0;
     }
     .site-navigation {
         position: inherit;
@@ -922,6 +935,11 @@ h4 {
     }
     .nav > li:hover {
         background: rgba(0, 0, 0, .08);
+    }
+    .navbar-toggle {
+        margin: 10px 10px 0 0;
+        border: 0px;
+        display:block;
     }
     .dropdown .dropdown a .caret {
         float: none;
@@ -962,9 +980,10 @@ h4 {
         float: left;
         margin-left: 10px;
     }
+     
     .bloc {
         padding-left: 0;
-        padding-right: 0;
+       
     }
     .bloc-xxl, .bloc-xl,.bloc-lg {
         padding: 40px 0;
@@ -975,8 +994,8 @@ h4 {
         padding-right: 0;
     }
  .bloc-tile-2 .container,.bloc-tile-3 .container,.bloc-tile-4 .container,.bloc-fill-screen .fill-bloc-top-edge, .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding-left: 0;
-        padding-right: 0;
+        padding:20px 0 10px ;
+
     }
     .a-block {
         padding: 0 10px;
@@ -1014,7 +1033,7 @@ h4 {
 @media (max-width: 400px) {
     .bloc {
         padding-left: 0;
-        padding-right: 0;
+        
     }
 }
 
